# behave-doctor

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
behave_doctor/: __init__.py  __main__.py  core.py
behave_doctor/cli/: __init__.py  app.py  formatters.py
behave_doctor/graph/: __init__.py  builder.py  cycles.py  dot.py
behave_doctor/model/: __init__.py  config.py  dependency_graph.py  diagnostic.py  enums.py  location.py  project_report.py  step_definition.py  step_match.py
behave_doctor/reporters/: __init__.py  json_reporter.py  sarif.py  text.py
behave_doctor/rules/: __init__.py  base.py  complexity.py  coverage.py  dependencies.py  quality.py  structure.py
behave_doctor/scanner/: __init__.py  project_scanner.py  step_scanner.py
changelog/: index.html
ci-cd/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  ci-cd.md  cli.md  configuration.md  contributing.md  faq.md  index.md  installation.md  python-api.md  quickstart.md  reporters.md
docs/rules/: complexity.md  coverage.md  dependencies.md  index.md  quality.md  structure.md
installation/: index.html
python-api/: index.html
quickstart/: index.html
reporters/: index.html
rules/: index.html
rules/complexity/: index.html
rules/coverage/: index.html
rules/dependencies/: index.html
rules/quality/: index.html
rules/structure/: index.html
search/: search_index.json
tests/fixtures/: config_sample_pyproject.toml  steps_aliased.py  steps_sample.py
tests/integration/: test_cli.py  test_public_api.py  test_scan_full_project.py
tests/unit/: test_config.py  test_cycles.py  test_dependency_graph.py  test_diagnostic.py  test_edge_cases.py  test_graph_builder.py  test_import.py  test_json_reporter.py  test_main_and_rules.py  test_project_report.py  test_project_scanner.py  (+11 more)
(+16 files in other folders)
